Adicionando configurações do Docker
